fixed styles for header on mobile devices

--- a/styles/media-queries.scss
+++ b/styles/media-queries.scss
@@ -65,3 +65,21 @@
         }
     }
 }
+
+@media screen and (max-width: 600px) {
+    #header {
+        .inner-wrap {
+            padding-top: 0;
+        }
+        nav ul > li > a {
+            font-size: toRem(18);
+        }
+        #search-form {
+            input {
+                &:focus {
+                    width: 150px;
+                }
+            }
+        }
+    }
+}
